--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,12 @@
     <title>Courses</title>
 </head>
 <body>
-<!--    <script>-->
-<!--        fetch('/data')-->
-<!--            .then(function (response) {-->
-<!--                console.log(response.json())-->
-<!--            })-->
-<!--    </script>-->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-dispatch@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-quadtree@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-timer@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-force@3"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
-
+    <svg width="800" height="800" style="border: 1px solid;"></svg>
 </body>
 </html>
