various styling changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Courses</title>
 </head>
-<body>
+<body style="height: 100vh; width: 100vw; margin: 0;">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
-    <svg width="800" height="800" style="border: 1px solid;"></svg>
+    <svg style="height: 100vh; width: 100vw; margin: 0; background-color: #FCFAF9;"></svg>
 </body>
 </html>
