--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="height: 100vh; width: 100vw; margin: 0;">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="{{ url_for('static', filename='main.js'}}"></script>
     <svg style="height: 100vh; width: 100vw; margin: 0; background-color: #FCFAF9;"></svg>
 </body>
 </html>
